<resources>
    <string name="app_name">Maid Alarm</string>
    <string name="Alarm">Alarm</string>
    <string name="Setting">Setting</string>
    <string name="Weather">Weather</string>
    <string name="quick_title">Quick Alarm</string>
    <string name="MainBannerID" translatable="false">ca-app-pub-9481402975436770/4351498697</string>
    <string name="FrontBannerID" translatable="false">ca-app-pub-9481402975436770/7075872565</string>
    <string name="alarmSetBannerID" translatable="false">ca-app-pub-9481402975436770/8005810851</string>
    <string name="quickSetBannerID" translatable="false">ca-app-pub-9481402975436770/2592227296</string>
    <string name="quick_60">+60min</string>
    <string name="quick_30">+30min</string>
    <string name="quick_15">+15min</string>
    <string name="quick_10">+10min</string>
    <string name="quick_5">+5min</string>
    <string name="quick_1">+1min</string>
    <string name="timeOver">hour should be within 99</string>
    <string name="saveBtn">save</string>
    <string name="cancelBtn">cancel</string>
    <string name="week_sun">SUN</string>
    <string name="week_mon">MON</string>
    <string name="week_tue">TUE</string>
    <string name="week_wed">WED</string>
    <string name="week_thur">THU</string>
    <string name="week_fri">FRI</string>
    <string name="week_sat">SAT</string>
    <string name="list_dialog_title">Maid Alarm</string>
    <string name="list_delete_dialog">Would you delete this...?</string>
    <string name="list_dialog_Yes">Yes</string>
    <string name="list_dialog_No">No</string>
    <string name="front_moreTime">10 minutes</string>
    <string name="front_ok">OK</string>
    <string name="front_10minutes">The alarm informs in 10minutes</string>
    <string name="alarmSet_AM">AM</string>
    <string name="alarmSet_PM">PM</string>
    <string name="alarmSet_Toast">Please set week... Master</string>
    <string name="alarmSet_selectBell">Alarm Bell</string>
    <string name="alarmSet_selectMode">Alarm Mode</string>
    <string name="alarmSet_selectBellTextTitle">Current Bell</string>
    <string name="alarmSet_selectModeTextTitle">Current Mode</string>
    <string name="alarmSet_selectModeNormal">Normal</string>
    <string name="alarmSet_selectModeCAL">Calculation</string>
    <string name="alarmToast_inform1">Alarm will Ring</string>
    <string name="alarmToast_inform2">days</string>
    <string name="alarmToast_inform3">hours</string>
    <string name="alarmToast_inform4">minutes later</string>
    <string name="alarmToast_Action1">Alarm will Ring 10 minutes later</string>
    <string name="alarmToast_Action2">Alarm will Ring 15 minutes later</string>
    <string name="alarmToast_Action3">Alarm will Ring 30 minutes later</string>
    <string name="actionButton1">+10Min</string>
    <string name="actionButton2">+15Min</string>
    <string name="actionButton3">+30Min</string>
    <string name="backButtonDoubleClick">Double tap back button in order to exit</string>
    <string name="settingItem_title">Simple Alarm Set</string>
    <string name="settingItem_selectAlarm">Simple Alarm Bell</string>
    <string name="settingItem_alarmMode">Simple alarm Mode</string>
    <string name="settingItem_alarmVolume">Simple alarm Volume</string>
    <string name="settingItem_alarmRepeat">Simple Mode Repeat</string>
    <string name="settingItem_sub_alarmMode1">Normal Alarm</string>
    <string name="settingItem_sub_alarmMode2">Calculate Game</string>
    <string name="settingItem_sub_alarmMode2_2">times repeat</string>
    <string name="settingItem_info">App Info</string>
    <string name="settingItem_sub_info">Version, OpenSource, Email, etc.</string>
    <string name="settingItem_notification">Set On/Off Notification</string>
    <string name="settingItem_sub_notification">You can turn off the notification</string>
    <string name="settingItem_notificationOn">On NextAlarm</string>
    <string name="settingItem_notificationOff">Off NextAlarm</string>
    <string name="settingItem_alarmModeItem1">Normal</string>
    <string name="settingItem_alarmModeItem2">Calculator</string>
    <string name="settingItem_calRepeat">Calculate Repeat</string>
    <string name="alarmSetFragment_noAlarm">Please set the alarm</string>
    <string name="alarmSetFragment_nextAlarm">(Next Alarm)</string>
    <string name="notification_Title">Maid Alarm</string>
    <string name="infoItem_support">Support</string>
    <string name="infoItem_subSupport">Could you support me?</string>
    <string name="infoItem_contact">Contact</string>
    <string name="infoItem_subContact">Any bugs, questions</string>
    <string name="infoItem_version">Version</string>
    <string name="infoItem_subVersion">Version</string>
    <string name="infoItem_openSource">Open Source, Ref</string>
    <string name="infoItem_subOpenSource" translatable="false">Apache, GPL3.0 etc</string>
    <string name="info_name">Maid Alarm</string>
    <string name="test_play">Play</string>
    <string name="typeOfBell_Normal">Normal-Bell</string>
    <string name="typeOfBell_Normal_Walking" translatable="false">Walking</string>
    <string name="typeOfBell_Normal_PianoMan" translatable="false">PianoMan</string>
    <string name="typeOfBell_Normal_Happy" translatable="false">HappyTown</string>
    <string name="typeOfBell_Normal_Lonely" translatable="false">Lonely</string>
    <string name="typeOfBell_Korean">Korean-Voice</string>
    <string name="typeOfBell_Korean_MinJjeong">Minjjeong</string>
    <string name="typeOfBell_Korean_Jeongyeon">Jeongyeon</string>
    <string name="AlarmSetActivityModi_error"> An error has occurred\nplease delete this alarm and set again</string>
    <string name="AlarmSetActivityModi_quickToNormal"> if you revise this alarm, \nit will change to normal alarm from quick alarm</string>
    <string name="typeOfBell_Japanese">Japanese-Voice(coming soon)</string>
    <string name="typeOfBell_English">English-Voice(coming soon)</string>
    <string name="typeOfBell_UltraSonic">Ultra Sonic</string>
    <string name="typeOfBell_UltraSonic_16.7kHz">16.7kHz(for 10ages)</string>
    <string name="typeOfBell_UltraSonic_15.8kHz">15.8kHz(for 20ages)</string>
    <string name="typeOfBell_UltraSonic_14.9kHz">14.9kHz(for 30ages)</string>
    <string name="typeOfBell_UltraSonic_14.1kHz">14.1kHz(for 40ages)</string>
    <string name="permission_dialogTitle">Permission</string>
    <string name="permission_dialogGotIt">I did it</string>
    <string name="permission_dialog_No">I didn\'t</string>
    <string name="permission_dialogMessage">
        it is used to show alarm pop-up in the background \nplease allow that</string>
    <string name="permission_overlay_toast">Need overlay permission to use this app</string>
    <string name="main_updateDownloading">Updating now. Please don\'t shut down the app or phone</string>
    <string name="main_updateDownloadDone">Update is over. The update will be applied after restart the app</string>
    <string name="main_updateAccepted">Update will start</string>
    <string name="update_dialogTitle">Update</string>
    <string name="update_dialogMessage">Will you update now?</string>
    <string-array name="title_list">
        <item>항목1</item>
        <item>항목2</item>
        <item>항목3</item>
    </string-array>
    <string-array name="value_list">
        <item>value1</item>
        <item>value2</item>
        <item>value3</item>
    </string-array>
    <string-array name="default_list">
        <item>value1</item>
        <item>value2</item>
    </string-array>
    <string name="clouds">Clouds</string>
    <string name="Thunderstorm">Thunderstorm</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="clear">Clear</string>
    <string name="mist">Mist</string>
    <string name="tornado">Tornado</string>
    <string name="uv">UV</string>
    <string name="wind_speed">Wind</string>
    <string name="precipitation">Precipitation</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="weather_progress">Getting Location and Weather Data\nPlease wait for a while</string>
    <string name="weathere_error">Error to get location data\nPlease try again</string>
    <string name="location_permmision">If you want to see weather, need location check permission</string>
    <string name="morning_weather_check">Morning Weather</string>
    <string name="sub_morning_weather_alarm">Setting about the weather forecast</string>
    <string name="everyday">Everyday</string>
    <string name="tomorrow_weather">Check Weather</string>
    <string name="tomorrow_weather_front">Overlay Alarm</string>
    <string name="tomorrowWeather">Tomorrow Weather</string>
    <string name="weather_setting">Weather Setting</string>
    <string name="morning_weather_toast">Show weather forecast after go off the alarm in 5AM to 9AM</string>
    <string name="tomorror_weather_toast">Notify tomorrow weather in set time</string>
    <string name="tomorror_weather_front_toast">On: Tomorrow weather with overlay Alarm with \nOff: tomorrow weather popUp notification</string>
    <string name="error_restart_toast">Got error!! please restart the app</string>
    <string name="internetCheck">Please check your internet connection</string>
</resources>