<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:id="@+id/row_GroupView"
    android:padding="10dp"
    android:background="@color/new_alarmItem_background"
    android:layout_height="wrap_content">

    <Switch
        android:id="@+id/row_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:checked="true"
        android:track="@drawable/switch_track_selector"
        android:thumb="@drawable/switch_thumb_selector"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_weight="300"
        android:orientation="vertical">

        <TextView
            android:id="@+id/row_clcok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nanumgothicbold"
            android:textSize="27dp"
            android:textColor="@color/white"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/row_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nanumgothic"
                android:gravity="center"
                android:text="@string/week_mon"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/row_tues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothic"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_tue" />

            <TextView
                android:id="@+id/row_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nanumgothic"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/week_wed" />

            <TextView
                android:id="@+id/row_thur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothic"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_thur" />

            <TextView
                android:id="@+id/row_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothic"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_fri" />

            <TextView
                android:id="@+id/row_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothic"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_sat" />

            <TextView
                android:id="@+id/row_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothic"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/week_sun" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/row_image_volume"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        app:srcCompat="@drawable/volume0" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <ImageView
        android:id="@+id/short_image_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        app:srcCompat="@drawable/trash" />
</LinearLayout>