<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/itemBackground"
    android:fitsSystemWindows="true"
    tools:context=".SelectRingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <life.sabujak.roundedbutton.RoundedButton
                android:id="@+id/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/nanumgothicextrabold"
                android:gravity="center"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:text="@string/test_play"
                android:textColor="#ffffff"
                android:textSize="20dp"
                app:buttonCornerRadius="20dp"
                app:buttonGradientEndColor="@color/purple_500"
                app:buttonGradientStartColor="@color/teal_200" />

            <life.sabujak.roundedbutton.RoundedButton
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/nanumgothicextrabold"
                android:gravity="center"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:text="@string/front_ok"
                android:textColor="#ffffff"
                android:textSize="20dp"
                app:buttonCornerRadius="20dp"
                app:buttonGradientEndColor="@color/purple_500"
                app:buttonGradientStartColor="@color/teal_200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/volume_icon" />

            <SeekBar
                android:id="@+id/volumeSeekBar"
                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:max="100"
                android:min="0"
                android:progress="100"
                android:thumb="?android:attr/textSelectHandle" />
        </LinearLayout>

        <TextView
            android:id="@+id/type_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothicextrabold"
            android:text="@string/typeOfBell_Normal"
            android:textColor="@color/teal_700"
            android:paddingStart="10dp"
            android:textSize="23sp" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton_N1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumgothicbold"
                android:textSize="17dp"
                android:text="@string/typeOfBell_Normal_Bar" />

            <RadioButton
                android:id="@+id/radioButton_N2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Normal_Guitar" />

            <RadioButton
                android:id="@+id/radioButton_N3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Normal_Happy" />

            <RadioButton
                android:id="@+id/radioButton_N4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Normal_Country" />

            <TextView
                android:id="@+id/type_korean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="@string/typeOfBell_Korean"
                android:textColor="@color/teal_700"
                android:paddingStart="10dp"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/radioButton_K1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Korean_Jeongyeon" />

            <RadioButton
                android:id="@+id/radioButton_K2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Korean_MinJjeong" />

            <TextView
                android:id="@+id/type_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="@string/typeOfBell_English"
                android:textColor="@color/teal_700"
                android:paddingStart="10dp"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/radioButton_E1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Korean_MinJjeong" />

            <TextView
                android:id="@+id/type_japanese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/nanumgothicextrabold"
                android:text="@string/typeOfBell_Japanese"
                android:textColor="@color/teal_700"
                android:paddingStart="10dp"
                android:textSize="23sp" />

            <RadioButton
                android:id="@+id/radioButton_J1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="@font/nanumgothicbold"
                android:text="@string/typeOfBell_Korean_Jeongyeon" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>